# Agentic-AI

./: .gitignore  Agentia_Hello_World.ipynb  CrewAI.ipynb  Customer_Support_Agent.ipynb  README.md  agent.py  backend.py  mAIstro.ipynb  pyproject.toml
12_langchain_ecosystem/langgraph/course-notebooks/module-4/: 2_sub_graph.ipynb
Colab_projects/: Order_Management.ipynb
Langgraph_st/: README.md  agent.py  backend.py  frontend.py  pyproject.toml
poem-flow/: .env  .gitignore  pyproject.toml
poem-flow/src/poem_flow/: __init__.py  main.py
poem-flow/src/poem_flow/crews/poem_crew/: poem_crew.py
poem-flow/src/poem_flow/crews/poem_crew/config/: agents.yaml  tasks.yaml
