[project]
name = "personal-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "langchain-google-genai>=2.0.9",
    "langchain-groq>=0.2.4",
    "langgraph>=0.2.72",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.0",
    "uvicorn>=0.34.0",
]
